--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,34 @@
-.container {
+.header, .container {
     display: flex;
-    justify-content: space-between;
+    background-color: gainsboro;
     width: 500px;
     margin: 0 auto;
-    height: 100px;
+    text-align: center;
+    
+}
+
+.header {
+    padding: 0px 20px;
+    background-color: gray;
+}
+
+h1 {
+    margin: 20px auto 20px auto;
+    
+    font-size: 38px;
+}
+
+.container {
+    justify-content: space-between;    
+    height: 70px;
     align-items: center;
+    padding: 20px 20px;
 }
 
 button {
     border-style: none;
     background-color: black;
-    color: rgb(69, 78, 158);
+    color: rgb(255, 255, 255);
     width: 150px;
     height: 30px;
     font-weight: 1000;
@@ -20,12 +38,12 @@ button {
 button:hover {
     background-color: rgb(82, 82, 82);
     height: 40px;
-    width: 160px;
     box-shadow: 5px 8px rgba(0, 0, 0, 0.212);
 }
 
 
 *  {
+    text-align: center;
     font-family: monospace;
 }
 
